<resources>
    <string name="app_name">EZshop</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="regis">คุณยังไม่มีบัญชี? กดตรงนี้</string>
    <string name="singin">sing in</string>
    <string name="clickhome">HOME</string>
    <string name="name">ชื่อ</string>
    <string name="lname">นามสกุล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="conpass">ยืนยันรหัสผ่าน</string>
    <string name="tel">เบอร์โทร</string>
    <string name="email">อีเมล</string>
    <string name="employee_greeting">สวัสดีคุณ : %1$s</string>
    <string name="employee_role">ตำแหน่ง : %1$s</string>
    <string name="employee_email">อีเมล: %1$s</string>
    <string name="employee_tel">เบอร์โทร: %1$s</string>
    <string name="search_hint">ค้นหาสินค้าด้วยชื่อหรือรหัส</string>
    <string name="menu_home">หน้าแรก</string>
    <string name="menu_cart">ตะกร้า</string>
    <string name="menu_profile">โปรไฟล์</string>
    <string name="menu_receipts">ดูใบเสร็จ</string>
    <string name="menu_add_product">เพิ่มสินค้า</string>
    <string-array name="roles">
        <item>ฝ่ายเบิกผลิต</item>
        <item>ฝ่ายเติมสต๊อก</item>
    </string-array>
</resources>