<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25374a"
    tools:context=".register">


    <Button
        android:id="@+id/button4"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:backgroundTint="#131610"
        android:fontFamily="@font/prompt"
        android:onClick="clickHome"
        android:text="@string/clickhome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/name"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtLname"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/lname"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <EditText
        android:id="@+id/etdPassword"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtLname" />

    <EditText
        android:id="@+id/edtCon_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/conpass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etdPassword" />

    <EditText
        android:id="@+id/edtTel"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/tel"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCon_password" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTel" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="260dp"
        android:layout_height="48dp"

        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/prompt"
        android:foreground="@null"
        android:onClick="register"
        android:text="สมัครสมาชิก"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <Spinner
        android:id="@+id/spRole"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bg"
        android:entries="@array/roles"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

</androidx.constraintlayout.widget.ConstraintLayout>
